# Ramona-music-bot-2.0

./: .example.env  .gitignore  Dockerfile  default-system-prompt.txt  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_context_table.py
app/: config.py  constants.py  logger.py  main.py
app/cogs/: general.py  music.py  player_view.py  speech.py
app/schemas/music/: __init__.py  track.py
app/services/music/: player.py
app/services/music/youtube_music/: __init__.py  api_client.py  service.py  ytdl.py
app/services/speech/: context_service.py  llm_client.py
app/storage/: base.py  models.py  session.py
app/storage/crud/: __init__.py  base_crud.py  context_crud.py  track_crud.py
app/utils/file_storage/: __init__.py  local.py
scripts/: cleanup_tracks.py
src/: main.py
