[project]
name = "ramona-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "yt-dlp>=2024.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["app"]

[tool.ruff.lint]
select = [
  "E", "F",
  "I",
  "B",
  "UP",
]
ignore = [
  "UP045",
  "UP006",
  "UP006",
  "UP007",
  "UP035",
  "B008"
]